Remove trace session history
